	(patch by debian)
	
	* src/gv_widgetless.dat: Resource for widgetless mode (new file)
	(patch by debian)
	
	* src/gv_message.h: Document new -widgetless switch 
	(patch by debian)
	
	* src/resource.c: Handle new -widgetless switch (patch by debian)
	
	* src/main_globals: added widgetless_p	(patch by debian)
	
	* src/main.c: Parsing of "-widgetless" (patch by debian)

2008-06-01  Markus Steinborn <msteinbo@uni-paderborn.de>

	* ChangeLog: Fixed typo in recent dates

	* configure.ac, src/versionp.h: Bump version to 3.6.4.

2008-05-23  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/stdc.h: removed (it is non-free)
	
	* src/getenv.c: likewise (it's not used in standard configuration,
	anyway)
	
	* src/setenv.c: likewise(it's not used in standard configuration,
	anyway)
	
	* src/setenv.h: likewise(it's not used in standard configuration,
	anyway)
	
	* src/Aaa.h: Do not include stdc.h.  (Patch by debian)
	
	* src/main.c: likewise (Patch by debian)
	
	* src/main.c: Redefine preprocessor macro BITMAP_ARGS (Patch by debian)
	
	* src/main_resources.h: Redefine preprocessor macro DECLARE_STRING
	(Patch by debian)
	
	* src/Makefile.am: Remove reference to src/stdc.h src/getenv.c
	src/setenv.c src/setenv.h
	
	* configure.ac: Remove option --enable-setenv-code
	
	* INSTALL: Remove description of the option --enable-setenv-code

2008-05-22  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/info.c (cb_popupInfoPopup): Revert returning when calling gs with
	the `quiet' option (should fix #23199)

	* src/main.c (main): Reverted Forcing the `XtSetArg' call to include
	XtNquiet to True
	
	* src/file.c (global): Define ENODATA as ENOMSG if ENODATA if undefined.
	Should fix compiling on GNU/kFreeBSD

2008-05-21  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/ps.c (psscan): Fixed possible uninitialized local variable
	text (remained unintialized if sscanf failes for some reason)

2008-05-21  Markus Steinborn <msteinbo@uni-paderborn.de>